--- a/index.html
+++ b/index.html
@@ -1,82 +1,51 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="es">
 <head>
-<meta charset="utf-8">
-<title>Documento sin título</title>
-<style>
-
-.numero{
-	width:60px;
-	height:60px;
-	
-	
-}
-
-.igual{
-	width:120px;
-	height:60px;
-	
-}
-
-table{
-	margin:auto;
-}
-
-.color_display{
-	height:30px;
-	background-color:#000;
-	border:medium #FFF;
-	font: "Space Age";
-	color:#0F0;
-	font-size:18px;
-	text-align:right;
-	padding:5px;
-}
-
-
-
-</style>
-
-
-
+<title>La cala developer</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="styles.css">
+<link rel="icon" href="img/logo.png">
 </head>
-
 <body>
-<table width="15%" border="1">
-  <tr>
-    <td colspan="4" align="center">
-    <input name="display" type="text" class="color_display" id="display" size="25"></td>
-  </tr>
-  <tr>
-    <td width="26%"><input name="button" type="button" class="numero" id="button" value="+" ></td>
-    <td width="21%"><input name="button2" type="button" class="numero" id="button2" value="-"></td>
-    <td width="21%"><input name="button3" type="button" class="numero" id="button3" value="*" ></td>
-    <td width="32%"><input name="button4" type="button" class="numero" id="button4" value="/" ></td>
-  </tr>
-  <tr>
-    <td><input name="num7" type="button" class="numero" id="num7" value="7" ></td>
-    <td><input name="num8" type="button" class="numero" id="num8" value="8" ></td>
-    <td><input name="num9" type="button" class="numero" id="num9" value="9" ></td>
-    <td>&nbsp;</td>
-  </tr>
-  <tr>
-    <td><input name="num4" type="button" class="numero" id="num4" value="4" ></td>
-    <td><input name="num5" type="button" class="numero" id="num5" value="5" ></td>
-    <td><input name="num6" type="button" class="numero" id="num6" value="6" ></td>
-    <td>&nbsp;</td>
-  </tr>
-  <tr>
-    <td><input name="num1" type="button" class="numero" id="num1" value="1" ></td>
-    <td><input name="num2" type="button" class="numero" id="num2" value="2" ></td>
-    <td><input name="num3" type="button" class="numero" id="num3" value="3" ></td>
-    <td>&nbsp;</td>
-  </tr>
-  <tr>
-    <td><input name="num0" type="button" class="numero" id="num0" value="0" ></td>
-    <td><input name="button17" type="button" class="numero" id="button17" value=","></td>
-    <td colspan="2"><input name="button12" type="button" class="igual" id="button12" value="=" ></td>
-  </tr>
-</table>
-
+    <header class="header">
+        <div class="container logo-nav-container">
+            <img src="img/logo.png" alt="logo" id="logoimg">
+        <img src="img/menu.png" class="menu-icon"></img>
+        <nav class="navigation">
+          <ul>
+              <li><a href="#">Inicio</a></li>
+              <li><a href="#">Acerca</a></li>
+              <li><a href="#">Servicios</a></li>
+              <li><a href="#">Clientes</a></li>
+              <li><a href="#">Contacto</a></li>
+          </ul>
+        </nav>
+    </div>
+    </header>
+    <main class="main">
+        <div class="container">
+            <h1>La cala developer</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec consequat a nisi quis tristique. Aliquam tortor felis, euismod in euismod quis, mattis vel dolor. Donec rutrum turpis nibh, vel pulvinar tellus suscipit mattis. Aenean efficitur malesuada orci, tincidunt lobortis est vehicula ac. Morbi justo neque, commodo mattis consequat nec, egestas nec dolor. Nunc pulvinar ipsum nec erat gravida laoreet. Maecenas orci urna, molestie in urna at, molestie facilisis urna. Duis vulputate gravida ipsum. Pellentesque ultricies mi vel ipsum mattis, et ultrices odio laoreet. Morbi at risus non nulla facilisis fermentum ac accumsan massa.</p>
+        </div>
+    </main>
+<footer class="footer">
+    <div class="container">
+        <br/>
+        <h2 id="footerh2">Siguenos en nuestras redes sociales: </h2>
+        <a href="https://twitter.com/1David5t" target="_blank">
+            <img class="footerimg" src="img/twitter.png" alt="twitter">
+        </a>
+        <a href="https://www.youtube.com/channel/UChtFvOcHMoKepdvqo88Qwtg" target="_blank">
+            <img class="footerimg" src="img/youtube.png" alt="youtube">
+        </a>
+        <img  class="footerimg" src="img/facebook.png" alt="facebook">
+        <img  class="footerimg" src="img/instagram.png" alt="instagram">
+    </div>
+</footer>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js">
+</script>
+<script src="scripts.js">
+</script>
 </body>
 </html>
